Create swagger for client
